--- a/gtk-3.0/scrollbar.css
+++ b/gtk-3.0/scrollbar.css
@@ -85,7 +85,7 @@ scrollbar button {
 	min-height: 6px;
 	color: @theme_fg;
 	border-color: transparent;
-	background: none;
+	background: transparent;
 }
 
 scrollbar button.up:disabled,
@@ -93,5 +93,5 @@ scrollbar button.down:disabled {
 	color: @scroll_disabled_fg;
 }
 
-/* scrollbar.vertical button.up { -gtk-icon-transform: rotate(90deg); }
-scrollbar.vertical button.down  { -gtk-icon-transform: rotate(90deg); } */
+scrollbar.vertical button.up { -gtk-icon-transform: rotate(90deg); }
+scrollbar.vertical button.down  { -gtk-icon-transform: rotate(90deg); }
