--- a/gtk-3.0/text-inputs.css
+++ b/gtk-3.0/text-inputs.css
@@ -22,7 +22,6 @@ entry:disabled {
 
 entry:focus {
 	border-color: @entry_border_focus;
-	background-image: none;
 }
 
 entry selection {
